# phaba

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
phaba-gl/: CMakeLists.txt
phaba-gl/Buffer/: Buffer.cpp  Buffer.hpp
phaba-gl/Program/: Program.cpp  Program.hpp
phaba-gl/Shader/: Shader.cpp  Shader.hpp
playground/: CMakeLists.txt  Main.cpp
playground/Application/: Application.cpp  Application.hpp
playground/GenericScene/: GenericScene.cpp  GenericScene.hpp
playground/Loader/: Loader.cpp  Loader.hpp
playground/Loader/Storage/: Storage.cpp  Storage.hpp
playground/Misc/: CMakeLists.txt
playground/Misc/objects/: box_1kg  floor
playground/Misc/scenes/: level1
playground/Misc/shapes/: box  floor
playground/Object/: Object.hpp
playground/Renderer/: Renderer.cpp  Renderer.hpp
playground/Renderer/Colors/: Colors.cpp  Colors.hpp
playground/Renderer/Shaders/: Shaders.h
playground/Renderer/Shape/: Shape.cpp  Shape.hpp
playground/Scene/: Scene.cpp  Scene.hpp
playground/Scenes/Demo1/: Demo1.cpp  Demo1.hpp
playground/Shaders/: Shaders.h  vertex.glsl
playground/Shape/: Shape.cpp  Shape.hpp
src/: CMakeLists.txt  Common.hpp
src/Body/: Body.cpp  Body.hpp
src/BodyBuilder/: BodyBuilder.cpp  BodyBuilder.hpp
src/BodyPart/: BodyPart.cpp  BodyPart.hpp
src/Detail/: Engine.cpp  Engine.hpp
src/Detail/Bodies/: Bodies.cpp  Bodies.hpp
src/Detail/Parts/: Parts.cpp  Parts.hpp
src/Detail/Parts/Descriptors/: PartsDescriptors.cpp  PartsDescriptors.hpp
src/Detail/Parts/Indices/: PartsVerticesIndices.cpp  PartsVerticesIndices.hpp
src/Detail/Parts/Vertices/: PartsVertices.cpp  PartsVertices.hpp
src/World/: World.cpp  World.hpp
src/World/Detail/: Engine.cpp  Engine.hpp
src/World/Detail/Bodies/: Bodies.cpp  Bodies.hpp
src/World/Detail/Parts/: Parts.cpp  Parts.hpp
test/: BodyBuilderTest.cpp  CMakeLists.txt  Main.cpp  WorldTest.cpp
test/Details/: ShapesIntersectionTest.cpp
